--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -66,3 +66,202 @@
 .last-column img:nth-child(n+2){
     margin-top: 15px;
 }
+
+@media (max-width: 1680px){
+    .footer-container{
+        height: 407px;
+    }
+    
+    .box-content{
+        height: 213px;
+        width: 1017px;
+    }
+    
+    .first-column{
+        width: 278px;
+    }
+    
+    .second-column{
+        padding-right: 45px;
+    }
+    
+    .second-column div{
+        margin-top: 25px;
+    }
+    
+    .third-column{
+        padding-left: 45px;
+    }
+    
+    .third-column p:nth-child(1){
+        padding-right: 45px;
+    }
+    
+    .third-column div{
+        margin-top: 25px;
+    }
+    
+    .last-column {
+        margin-top: 25px;
+        margin-left: 48px;
+    }
+    
+    .last-column img{
+        height: 38px;
+        width: 38px;
+    }
+    
+    .last-column img:nth-child(n+2){
+        margin-top: 14px;
+    }
+}
+
+@media (max-width: 1536px){
+    .footer-container{
+        height: 372px;
+    }
+    
+    .box-content{
+        height: 195px;
+        width: 930px;
+    }
+    
+    .first-column{
+        width: 254px;
+    }
+    
+    .second-column{
+        padding-right: 41px;
+    }
+    
+    .second-column div{
+        margin-top: 23px;
+    }
+    
+    .third-column{
+        padding-left: 41px;
+    }
+    
+    .third-column p:nth-child(1){
+        padding-right: 41px;
+    }
+    
+    .third-column div{
+        margin-top: 23px;
+    }
+    
+    .last-column {
+        margin-top: 23px;
+        margin-left: 44px;
+    }
+    
+    .last-column img{
+        height: 35px;
+        width: 35px;
+    }
+    
+    .last-column img:nth-child(n+2){
+        margin-top: 13px;
+    }
+}
+
+@media (max-width: 1440px){
+    .footer-container{
+        height: 349px;
+    }
+    
+    .box-content{
+        height: 183px;
+        width: 872px;
+    }
+    
+    .first-column{
+        width: 238px;
+    }
+    
+    .second-column{
+        padding-right: 38px;
+    }
+    
+    .second-column div{
+        margin-top: 22px;
+    }
+    
+    .third-column{
+        padding-left: 38px;
+    }
+    
+    .third-column p:nth-child(1){
+        padding-right: 38px;
+    }
+    
+    .third-column div{
+        margin-top: 22px;
+    }
+    
+    .last-column {
+        margin-top: 22px;
+        margin-left: 41px;
+    }
+    
+    .last-column img{
+        height: 33px;
+        width: 33px;
+    }
+    
+    .last-column img:nth-child(n+2){
+        margin-top: 12px;
+    }
+}
+
+@media (max-width: 1366px){
+    .footer-container{
+        height: 331px;
+    }
+    
+    .box-content{
+        height: 174px;
+        width: 827px;
+    }
+    
+    .first-column{
+        width: 226px;
+    }
+    
+    .second-column{
+        padding-right: 36px;
+    }
+    
+    .second-column div{
+        margin-top: 21px;
+    }
+    
+    .third-column{
+        padding-left: 36px;
+    }
+    
+    .third-column p:nth-child(1){
+        padding-right: 36px;
+    }
+    
+    .third-column div{
+        margin-top: 21px;
+    }
+    
+    .last-column {
+        margin-top: 21px;
+        margin-left: 39px;
+    }
+    
+    .last-column img{
+        height: 31px;
+        width: 31px;
+    }
+    
+    .last-column img:nth-child(n+2){
+        margin-top: 11px;
+    }
+}
+
+
+
