--- a/src/components/home/homeContent/narfleetTeam/NarfleetTeam.css
+++ b/src/components/home/homeContent/narfleetTeam/NarfleetTeam.css
@@ -119,3 +119,238 @@
     font-size: 20px;
     line-height: 1.1;
 }
+
+
+@media (max-width: 1680px){
+    .team-container{
+        height: 797px;
+    }
+
+    .team-container img{
+        height: 797px;
+    }
+
+    .team-content{
+        font-size: 45px;
+        height: 797px;
+    }
+
+    .team-images img:nth-child(1){
+        height: 623px;
+        width: 479px;
+    }
+
+    .team-images img:nth-child(2){
+        height: 568px;
+        width: 479px;
+        margin-right: 700px;
+    }
+
+    .team-images img:nth-child(3){
+        height: 568px;
+        width: 479px;
+        margin-left: 735px;
+    }
+
+    .team-softlight img{
+        height: 623px;
+        width: 479px;
+    }
+
+    .team-images{
+        width: 1478px;
+        height: 657px;
+    }
+
+
+    .team-content p{
+        margin-top: 43px;
+        font-size: 31px;
+    }
+
+    .green-line{
+        width: 1478px;
+        margin-top: 59px;
+    }
+
+    .team-title{
+        height: 65px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 1536px){
+    .team-container{
+        height: 729px;
+    }
+
+    .team-container img{
+        height: 729px;
+    }
+
+    .team-content{
+        font-size: 41px;
+        height: 729px;
+    }
+
+    .team-images img:nth-child(1){
+        height: 570px;
+        width: 438px;
+    }
+
+    .team-images img:nth-child(2){
+        height: 519px;
+        width: 438px;
+        margin-right: 640px;
+    }
+
+    .team-images img:nth-child(3){
+        height: 519px;
+        width: 438px;
+        margin-left: 672px;
+    }
+
+    .team-softlight img{
+        height: 570px;
+        width: 438px;
+    }
+
+    .team-images{
+        width: 1351px;
+        height: 601px;
+    }
+
+
+    .team-content p{
+        margin-top: 39px;
+        font-size: 28px;
+    }
+
+    .green-line{
+        width: 1351px;
+        margin-top: 54px;
+    }
+
+    .team-title{
+        height: 59px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 1440px){
+    .team-container{
+        height: 684px;
+    }
+
+    .team-container img{
+        height: 684px;
+    }
+
+    .team-content{
+        font-size: 38px;
+        height: 684px;
+    }
+
+    .team-images img:nth-child(1){
+        height: 534px;
+        width: 411px;
+    }
+
+    .team-images img:nth-child(2){
+        height: 487px;
+        width: 411px;
+        margin-right: 600px;
+    }
+
+    .team-images img:nth-child(3){
+        height: 487px;
+        width: 411px;
+        margin-left: 630px;
+    }
+
+    .team-softlight img{
+        height: 534px;
+        width: 411px;
+    }
+
+    .team-images{
+        width: 1267px;
+        height: 563px;
+    }
+
+
+    .team-content p{
+        margin-top: 37px;
+        font-size: 26px;
+    }
+
+    .green-line{
+        width: 1267px;
+        margin-top: 51px;
+    }
+
+    .team-title{
+        height: 55px;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 1366px){
+    .team-container{
+        height: 649px;
+    }
+
+    .team-container img{
+        height: 649px;
+    }
+
+    .team-content{
+        font-size: 36px;
+        height: 649px;
+    }
+
+    .team-images img:nth-child(1){
+        height: 507px;
+        width: 389px;
+    }
+
+    .team-images img:nth-child(2){
+        height: 462px;
+        width: 389px;
+        margin-right: 569px;
+    }
+
+    .team-images img:nth-child(3){
+        height: 462px;
+        width: 389px;
+        margin-left: 598px;
+    }
+
+    .team-softlight img{
+        height: 507px;
+        width: 389px;
+    }
+
+    .team-images{
+        width: 1202px;
+        height: 534px;
+    }
+
+
+    .team-content p{
+        margin-top: 35px;
+        font-size: 25px;
+    }
+
+    .green-line{
+        width: 1202px;
+        margin-top: 48px;
+    }
+
+    .team-title{
+        height: 52px;
+        font-size: 14px;
+    }
+}
+
+
