--- a/src/components/home/homeContent/news/News.css
+++ b/src/components/home/homeContent/news/News.css
@@ -7,6 +7,10 @@
     margin-top: 335px;
     position: absolute;
     margin-left: 520px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
 }
 
 .title-news{
@@ -17,7 +21,8 @@
     top: -20px;
     right: 0;
     border-radius: 20px 20px 0 20px;
-    display: grid;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     color: white;
@@ -25,7 +30,7 @@
 }
 
 .padding-news{
-    padding: 55px 68px 61px 69px;
+    padding: 0px 68px 0px 69px;
     font-size: 20px;
     line-height: 1.3;
 }
@@ -53,6 +58,10 @@
     margin-top: 838px;
     position: absolute;
     margin-left: 520px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
 }
 
 .title-announcement{
@@ -82,3 +91,272 @@
 .announcement-container p:nth-child(n+3){
     margin-top: 25px;
 }
+
+@media (max-width: 1680px) {
+    .news-container{
+        height: 400px;
+        border-radius: 4px;
+        width: 1023px;
+        margin-top: 293px;
+        margin-left: 455px;
+    }
+
+    .title-news{
+        height: 35px;
+        width: 119px;
+        top: -18px;
+        border-radius: 18px 18px 0 18px;
+        font-size: 18px;
+    }
+
+    .padding-news{
+        padding: 0px 59px 0px 60px;
+        font-size: 18px;
+    }
+
+    .news-container p:nth-child(1){
+        font-size: 25px;
+    }
+
+    .news-container p:nth-child(2){
+        margin-top: 25px;
+    }
+
+    .news-container p:nth-child(n+3){
+        margin-top: 22px;
+    }
+
+    .announcement-container{
+        height: 386px;
+        width: 1023px;
+        border-radius: 4px;
+        margin-top: 733px;
+        margin-left: 455px;
+    }
+
+    .title-announcement{
+        height: 35px;
+        width: 210px;
+        top: -18px;
+        border-radius: 18px 18px 0 18px;
+        font-size: 18px;
+    }
+
+    .announcement-container p:nth-child(1){
+        font-size: 25px;
+    }
+
+    .announcement-container p:nth-child(2){
+        margin-top: 25px;
+    }
+
+    .announcement-container p:nth-child(n+3){
+        margin-top: 22px;
+    }    
+}
+
+@media (max-width: 1536px) {
+    .news-container{
+        height: 366px;
+        border-radius: 4px;
+        width: 935px;
+        margin-top: 268px;
+        margin-left: 416px;
+    }
+
+    .title-news{
+        height: 32px;
+        width: 109px;
+        top: -16px;
+        border-radius: 16px 16px 0 16px;
+        font-size: 16px;
+    }
+
+    .padding-news{
+        padding: 0px 54px 0px 55px;
+        font-size: 16px;
+    }
+
+    .news-container p:nth-child(1){
+        font-size: 23px;
+    }
+
+    .news-container p:nth-child(2){
+        margin-top: 23px;
+    }
+
+    .news-container p:nth-child(n+3){
+        margin-top: 20px;
+    }
+
+    /* Announcement */
+
+    .announcement-container{
+        height: 353px;
+        width: 935px;
+        border-radius: 4px;
+        margin-top: 670px;
+        margin-left: 416px;
+    }
+
+    .title-announcement{
+        height: 32px;
+        width: 192px;
+        top: -16px;
+        border-radius: 16px 16px 0 16px;
+        font-size: 16px;
+    }
+
+    .announcement-container p:nth-child(1){
+        font-size: 23px;
+    }
+
+    .announcement-container p:nth-child(2){
+        margin-top: 23px;
+    }
+
+    .announcement-container p:nth-child(n+3){
+        margin-top: 20px;
+    }    
+}
+
+
+@media (max-width: 1440px) {
+    .news-container{
+        height: 343px;
+        border-radius: 4px;
+        width: 877px;
+        margin-top: 251px;
+        margin-left: 390px;
+    }
+
+    .title-news{
+        height: 30px;
+        width: 102px;
+        top: -15px;
+        border-radius: 15px 15px 0 15px;
+        font-size: 15px;
+    }
+
+    .padding-news{
+        padding: 0px 51px 0px 52px;
+        font-size: 15px;
+    }
+
+    .news-container p:nth-child(1){
+        font-size: 22px;
+    }
+
+    .news-container p:nth-child(2){
+        margin-top: 22px;
+    }
+
+    .news-container p:nth-child(n+3){
+        margin-top: 19px;
+    }
+
+    /* Announcement */
+
+    .announcement-container{
+        height: 331px;
+        width: 877px;
+        border-radius: 4px;
+        margin-top: 628px;
+        margin-left: 390px;
+    }
+
+    .title-announcement{
+        height: 30px;
+        width: 180px;
+        top: -15px;
+        border-radius: 15px 15px 0 15px;
+        font-size: 15px;
+    }
+
+    .announcement-container p:nth-child(1){
+        font-size: 22px;
+    }
+
+    .announcement-container p:nth-child(2){
+        margin-top: 22px;
+    }
+
+    .announcement-container p:nth-child(n+3){
+        margin-top: 19px;
+    }    
+}
+
+@media (max-width: 1366px) {
+    .news-container{
+        height: 325px;
+        border-radius: 4px;
+        width: 832px;
+        margin-top: 238px;
+        margin-left: 370px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+    }
+
+    .title-news{
+        height: 28px;
+        width: 97px;
+        top: -14px;
+        border-radius: 14px 14px 0 14px;
+        font-size: 14px;
+    }
+
+    .padding-news{
+        padding: 0px 48px 0px 49px;
+        font-size: 14px;
+    }
+
+    .news-container p:nth-child(1){
+        font-size: 21px;
+    }
+
+    .news-container p:nth-child(2){
+        margin-top: 21px;
+    }
+
+    .news-container p:nth-child(n+3){
+        margin-top: 18px;
+    }
+
+    /* Announcement */
+
+    .announcement-container{
+        height: 314px;
+        width: 832px;
+        border-radius: 4px;
+        margin-top: 596px;
+        margin-left: 370px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+    }
+
+    .title-announcement{
+        height: 28px;
+        width: 170px;
+        top: -14px;
+        border-radius: 14px 14px 0 14px;
+        font-size: 14px;
+    }
+
+    .announcement-container p:nth-child(1){
+        font-size: 21px;
+    }
+
+    .announcement-container p:nth-child(2){
+        margin-top: 21px;
+    }
+
+    .announcement-container p:nth-child(n+3){
+        margin-top: 18px;
+    }    
+}
+
+
