--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
 	vertical-align: baseline;
 }
 
@@ -25,6 +24,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background: black !important;
+	overflow: overlay;
 }
 ol, ul {
 	list-style: none;
@@ -42,6 +43,30 @@ table {
 	border-spacing: 0;
 }
 
+/* width */
+::-webkit-scrollbar {
+	width: .8vw;
+	background: transparent;
+  }
+  
+  /* Track */
+  /* ::-webkit-scrollbar-track {
+  } */
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: rgba(0, 0, 0, .3) !important;
+    backdrop-filter: blur(25px) !important;
+	border-radius: 100px;
+	border: 1px solid rgba(255, 255, 255, .225);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+  }
+
+  
 @font-face{
 	font-family: 'Avenir Book';
 	src: url("./assets/Fonts/Avenir.ttc");
