--- a/src/index.css
+++ b/src/index.css
@@ -85,13 +85,17 @@ table {
 	font-family: 'oblique';
 }
 
-@font-face {font-family: "Avenir Light"; 
+@font-face {
+	font-family: "Avenir Light"; 
 	src: url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.eot"); 
-	src: url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.woff") format("woff"), url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.svg#Avenir Light") format("svg"); }
+	src: url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.eot?#iefix") format("embedded-opentype"), 
+	url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.woff2") format("woff2"), 
+	url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.woff") format("woff"), url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/116af611cbcd9e4bada60b4e700430c1.svg#Avenir Light") format("svg"); }
 
 .Avenir-light{
 	font-family: Avenir Light;
 }
+
 
 @font-face {font-family: "Avenir Medium";
 	src: url("//db.onlinewebfonts.com/t/2090551770be22b09600a40b0b4673b7.eot");
