--- a/src/components/home/homeContent/narfleetTeam/NarfleetTeam.css
+++ b/src/components/home/homeContent/narfleetTeam/NarfleetTeam.css
@@ -1,10 +1,10 @@
 .team-container{
-    height: 912px;
+    height: 840px;
     position: relative;
 }
 
 .team-container img{
-    height: 912px;
+    height: 840px;
     width: 100%;
     object-fit: cover;
 }
@@ -16,16 +16,15 @@
 .team-content{
     position: absolute;
     color: white;
-    font-size: 50px;
-    height: 912px;
+    height: 840px;
     width: 100%;
     position: absolute;
     top: 0;
 }
 
 .team-images img:nth-child(1){
-    height: 712px;
-    width: 548px;
+    height: 630px;
+    width: 489px;
     object-fit: cover;
     position: absolute;
     bottom: 0;
@@ -34,8 +33,8 @@
 }
 
 .team-images img:nth-child(2){
-    height: 650px;
-    width: 548px;
+    height: 568px;
+    width: 489px;
     object-fit: cover;
     position: absolute;
     z-index: -100;
@@ -45,8 +44,8 @@
 }
 
 .team-images img:nth-child(3){
-    height: 650px;
-    width: 548px;
+    height: 568px;
+    width: 489px;
     object-fit: cover;
     position: absolute;
     z-index: -100;
@@ -56,8 +55,8 @@
 }
 
 .team-softlight img{
-    height: 712px;
-    width: 548px;
+    height: 630px;
+    width: 489px;
     object-fit: cover;
 }
 
@@ -89,7 +88,7 @@
 
 .team-content p{
     margin-top: 49px;
-    font-size: 35px;
+    font-size: 31px;
     text-align: center;
 }
 
@@ -99,7 +98,7 @@
 }
 
 .green-line{
-    width: 1690px;
+    width: 1500px;
     border-bottom: 2px solid #5A7634;
     margin-top: 67px;
 }
@@ -107,7 +106,7 @@
 .team-title{
     z-index: 999;
     position: absolute;
-    height: 73px;
+    height: 66px;
     width: 100%;
     background: rgba(255, 255, 255, .2) !important;
     backdrop-filter: blur(15px) !important;
@@ -116,8 +115,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 1.1;
+}
+
+.team-title:nth-child(2){
+    font-size: 13px;
 }
 
 
@@ -297,59 +300,61 @@
 
 @media (max-width: 1366px){
     .team-container{
-        height: 608px;
+        height: 560px;
     }
-
+    
     .team-container img{
-        height: 608px;
+        height: 560px;
     }
-
+    
     .team-content{
-        font-size: 33px;
-        height: 608px;
+        height: 560px;
     }
-
+    
     .team-images img:nth-child(1){
-        height: 475px;
-        width: 364px;
+        height: 420px;
+        width: 326px;
     }
-
+    
     .team-images img:nth-child(2){
-        height: 432px;
-        width: 364px;
+        height: 379px;
+        width: 326px;
         margin-right: 533px;
     }
-
+    
     .team-images img:nth-child(3){
-        height: 432px;
-        width: 364px;
+        height: 379px;
+        width: 326px;
         margin-left: 560px;
     }
-
+    
     .team-softlight img{
-        height: 475px;
-        width: 364px;
+        height: 420px;
+        width: 326px;
     }
-
+    
     .team-images{
         width: 1126px;
         height: 500px;
     }
-
-
+    
     .team-content p{
-        margin-top: 32px;
-        font-size: 23px;
+        margin-top: 33px;
+        font-size: 21px;
     }
-
+    
     .green-line{
-        width: 1126px;
+        width: 1000px;
         margin-top: 45px;
     }
-
+    
     .team-title{
-        height: 48px;
-        font-size: 13px;
+        height: 44px;
+        font-size: 11px;
+    }
+    
+    .team-title:nth-child(2){
+        font-size: 9px;
     }
 }
 
