--- a/src/components/home/banner/Banner.css
+++ b/src/components/home/banner/Banner.css
@@ -42,7 +42,7 @@ img:nth-child(n+2){
     /* font-style: italic; */
 }
 
-@media (max-width: 1680px) {
+/* @media (max-width: 1680px) {
     .banner-container{
         height: 563px;
         border-radius: 0 0 0 525px;
@@ -160,19 +160,19 @@ img:nth-child(n+2){
         margin-right: 94px;
         font-size: 22px;
     }
-}
+} */
 
-@media (max-width: 1366px) {
+@media (min-width: 1366px) {
     .banner-container{
-        height: 383px;
-        border-radius: 0 0 0 333px;
+        height: 449px;
+        border-radius: 0 0 0 391px;
     }
     
     .logos{
-        padding-top: 64px;
-        margin-left: 57px;
-        height: 53px;
-        width: 54px;
+        padding-top: 75px;
+        margin-left: 67px;
+        height: 63px;
+        width: 63px;
     }
     
     img:nth-child(n+2){
@@ -180,14 +180,45 @@ img:nth-child(n+2){
     }
     
     .title{
-        margin-top: 48px;
-        margin-right: 76px;
-        font-size: 33px;
+        margin-top: 56px;
+        margin-right: 89px;
+        font-size: 38px;
     }
     
     .subtitle{
-        margin-top: 3px;
-        margin-right: 79px;
-        font-size: 17px;
+        margin-top: 4px;
+        margin-right: 93px;
+        font-size: 20px;
+        /* font-style: italic; */
+    }
+}
+
+@media (min-width: 1920px) {
+    .banner-container{
+        height: 575px;
+        border-radius: 0 0 0 500px;
+    }
+    
+    .logos{
+        padding-top: 96px;
+        margin-left: 86px;
+        height: 80px;
+        width: 81px;
+    }
+    
+    img:nth-child(n+2){
+        margin-left: 7px;
+    }
+    
+    .title{
+        margin-top: 72px;
+        margin-right: 114px;
+        font-size: 49px;
+    }
+    
+    .subtitle{
+        margin-top: 5px;
+        margin-right: 119px;
+        font-size: 26px;
     }
 }
