--- a/src/components/home/homeContent/homeContent.css
+++ b/src/components/home/homeContent/homeContent.css
@@ -5,8 +5,7 @@
 
 .homeContent-container{
     /* margin: 0 115px; */
-    width: 1500px;
-    /* border: 1px solid white; */
+    width: 1507px;
 }
 
 .row-content{
@@ -14,7 +13,7 @@
     flex-direction: row;
 }
 
-@media (max-width: 1680px) {
+/* @media (max-width: 1680px) {
     .homeContent-container{
         width: 1478px;
     }
@@ -30,13 +29,16 @@
     .homeContent-container{
         width: 1267px;
     }
-}
+} */
 
-@media (max-width: 1366px) {
+@media (min-width: 1366px) {
     .homeContent-container{
-        width: 1000px;
+        width: 1180px;
     }
 }
 
-
-
+@media (min-width: 1920px) {
+    .homeContent-container{
+        width: 1507px;
+    }
+}
