--- a/src/components/home/homeContent/news/News.css
+++ b/src/components/home/homeContent/news/News.css
@@ -6,7 +6,7 @@
     background-color: #FFFFFF1A;
     margin-top: 295px;
     position: absolute;
-    margin-left: 458px;
+    margin-left: 465px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -57,7 +57,7 @@
     background-color: #FFFFFF1A;
     margin-top: 745px;
     position: absolute;
-    margin-left: 458px;
+    margin-left: 465px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -92,7 +92,7 @@
     margin-top: 25px;
 }
 
-@media (max-width: 1680px) {
+/* @media (max-width: 1680px) {
     .news-container{
         height: 400px;
         border-radius: 4px;
@@ -189,8 +189,6 @@
         margin-top: 20px;
     }
 
-    /* Announcement */
-
     .announcement-container{
         height: 353px;
         width: 935px;
@@ -255,8 +253,6 @@
         margin-top: 19px;
     }
 
-    /* Announcement */
-
     .announcement-container{
         height: 331px;
         width: 877px;
@@ -284,73 +280,133 @@
     .announcement-container p:nth-child(n+3){
         margin-top: 19px;
     }    
-}
+} */
 
-@media (max-width: 1366px) {
+@media (min-width: 1366px) {
     .news-container{
-        height: 272px;
-        /* width: 1169px; */
+        height: 318px;
         border-radius: 4px;
-        width: 696px;
-        margin-top: 197px;
-        position: absolute;
-        margin-left: 305px;
+        width: 816px;
+        margin-top: 230px;
+        margin-left: 363px;
     }
     
     .title-news{
-        height: 23px;
-        width: 81px;
-        top: -13px;
-        border-radius: 13px 13px 0 13px;
-        font-size: 11px;
+        height: 27px;
+        width: 94px;
+        border-radius: 15px 15px 0 15px;
+        font-size: 13px;
     }
     
     .padding-news{
-        width: 615px;
-        font-size: 11px;
+        width: 720px;
+        font-size: 13px;
     }
     
     .news-container p:nth-child(1){
-        font-size: 17px;
+        font-size: 20px;
     }
     
     .news-container p:nth-child(2){
-        margin-top: 20px;
+        margin-top: 23px;
     }
     
     .news-container p:nth-child(n+3){
-        margin-top: 17px;
+        margin-top: 20px;
     }
     
     /* Announcement */
     
     .announcement-container{
-        height: 263px;
-        width: 696px;
+        height: 307px;
+        width: 816px;
         border-radius: 4px;
-        margin-top: 497px;
-        margin-left: 305px;
+        margin-top: 582px;
+        margin-left: 363px;
     }
     
     .title-announcement{
-        height: 24px;
-        width: 142px;
-        top: -13px;
-        border-radius: 13px 13px 0 13px;
-        font-size: 11px;
+        height: 27px;
+        width: 155px;
+        border-radius: 15px 15px 0 15px;
+        font-size: 13px;
     }
     
     .announcement-container p:nth-child(1){
-        font-size: 20px;
+        font-size: 23px;
     }
     
     .announcement-container p:nth-child(2){
-        margin-top: 20px;
+        margin-top: 23px;
     }
     
     .announcement-container p:nth-child(n+3){
-        margin-top: 17px;
-    }  
+        margin-top: 20px;
+    }
+    
 }
 
-
+@media (min-width: 1920px) {
+    .news-container{
+        height: 408px;
+        border-radius: 5px;
+        width: 1044px;
+        margin-top: 295px;
+        margin-left: 465px;
+    }
+    
+    .title-news{
+        height: 35px;
+        width: 122px;
+        border-radius: 20px 20px 0 20px;
+        font-size: 17px;
+    }
+    
+    .padding-news{
+        width: 922px;
+        font-size: 17px;
+        line-height: 1.4;
+    }
+    
+    .news-container p:nth-child(1){
+        font-size: 26px;
+    }
+    
+    .news-container p:nth-child(2){
+        margin-top: 30px;
+    }
+    
+    .news-container p:nth-child(n+3){
+        margin-top: 25px;
+    }
+    
+    /* Announcement */
+    
+    .announcement-container{
+        height: 394px;
+        width: 1044px;
+        border-radius: 5px;
+        margin-top: 745px;
+        margin-left: 465px;
+    }
+    
+    .title-announcement{
+        height: 36px;
+        width: 213px;
+        border-radius: 20px 20px 0 20px;
+        font-size: 17px;
+    }
+    
+    .announcement-container p:nth-child(1){
+        font-size: 30px;
+    }
+    
+    .announcement-container p:nth-child(2){
+        margin-top: 30px;
+    }
+    
+    .announcement-container p:nth-child(n+3){
+        margin-top: 25px;
+    }
+    
+}
