--- a/src/components/home/homeContent/search/Search.css
+++ b/src/components/home/homeContent/search/Search.css
@@ -25,7 +25,7 @@
     padding-left: 10px;
 }
 
-@media (max-width: 1680px) {
+/* @media (max-width: 1680px) {
     .search-container{
         width: 217px !important;
         height: 38px;
@@ -62,21 +62,34 @@
         font-size: 15px;
         padding-left: 7px;
     }
-}
+} */
 
-@media (max-width: 1366px) {
+@media (min-width: 1366px) {
     .search-container{
-        width: 149px !important;
-        height: 27px;
-        border-radius: 15px;
-        margin-top: 20px;
+        width: 174px !important;
+        height: 32px;
+        border-radius: 23px;
+        margin-top: 23px;
     }
     
     .search-icon {
         font-size: 14px;
-        padding-left: 7px;
+        padding-left: 8px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .search-container{
+        width: 223px !important;
+        height: 41px;
+        border-radius: 23px;
+        margin-top: 30px;
     }
     
+    .search-icon {
+        font-size: 18px;
+        padding-left: 10px;
+    }
 }
 
 
