about page done not responsive yet

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -21,6 +21,10 @@ p{
     font-size: 17px;
 }
 
+.active{
+    font-family: 'Avenir Black';
+}
+
 .btn-nav{
     /* position: sticky; */
     height: 47px;
