about page done not responsive yet v.2

--- a/src/components/about/about-content/AboutContent.css
+++ b/src/components/about/about-content/AboutContent.css
@@ -121,6 +121,14 @@
     align-items: center;
 }
 
+.explore-box {
+    width: 1307px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .explore-next img {
     height: 299px;
     width: 535px;
