--- a/src/components/about/about-banner/AboutBanner.css
+++ b/src/components/about/about-banner/AboutBanner.css
@@ -38,3 +38,63 @@
     line-height: 1.4;
     text-shadow: 10px 10px 10px #00000029;
 }
+
+@media  (min-width: 1366px){
+    .about-banner {
+        height: 449px;
+        border-radius: 0 0 361px 0;
+    }
+    
+    .about-logos{
+        padding-top: 130px;
+        margin-left: 80px;
+        height: 62.5px;
+        width: 63px;
+    }
+    
+    .about-logos img:nth-child(n+2){
+        margin-left: 5px;
+    }
+    
+    .about-title{
+        font-size: 38px;
+        margin-left: 80px;
+        margin-top: 8px;
+    }
+    
+    .about-bannerText {
+        margin-top: 8px;
+        width: 668px;
+        margin-left: 80px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .about-banner {
+        height: 575px;
+        border-radius: 0 0 500px 0;
+    }
+    
+    .about-logos{
+        padding-top: 166px;
+        margin-left: 102px;
+        height: 80px;
+        width: 81px;
+    }
+    
+    .about-logos img:nth-child(n+2){
+        margin-left: 7px;
+    }
+    
+    .about-title{
+        font-size: 49px;
+        margin-left: 102px;
+        margin-top: 10px;
+    }
+    
+    .about-bannerText {
+        margin-top: 10px;
+        width: 855px;
+        margin-left: 102px;
+    }
+}
